--- a/server/src/main/webapp/wechat/D_1_用车预定.html
+++ b/server/src/main/webapp/wechat/D_1_用车预定.html
@@ -15,7 +15,7 @@
 <body>
 
 <header>
-    <div class="title">班车线路</div>
+    <div class="title">用车预定</div>
 </header>
 
 <section class="wrap route-box">
